Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 <li>b2b.inputString (get user input)</li>
 </ul><h2>3. To be implemented</h2>
 
+<p><em><a href="http://community.casiocalc.org/topic/7095-back2basic-a-luazm-library/">Help</a><a href="http://www.cemetech.net/forum/viewtopic.php?t=8883&amp;highlight=">me come</a><a href="http://www.omnimaga.org/index.php?topic=15874">up with ideas!</a></em></p>
+
 <h2>4. Usage</h2>
 
 <p>Make a folder called "lib" in your root directory. Put b2b.lua in this folder.
@@ -51,52 +53,7 @@ In the program you wish to use the library, put <em>run([[lib\b2b.lua]])</em> at
 
 <h2>5. Function syntax</h2>
 
-<p><em><strong>NOTE: all width, height, x, and y values are not pixels, but characters.</strong></em></p>
-
-<h3>b2b.menu(x, y, width, height, title, array, colorfg (optional), colorbg (optional))</h3>
-
-<p>a menu function. returns number of selected item.</p>
-
-<ul>
-<li>x: integer</li>
-<li>y: integer</li>
-<li>width: integer</li>
-<li>height: integer. if smaller than number of items, menu will automatically scroll.</li>
-<li>title: string. title to be displayed above menu.</li>
-<li>array: array. menu options. ex. {"entry1", "entry2"}</li>
-<li>colorfg, colorbg: color. defaults to b&amp;w</li>
-</ul><h3>b2b.printText(string, colorfg (optional), colorbg (optional))</h3>
-
-<p>displays text with LESS-style page breaks</p>
-
-<ul>
-<li>string: string to be printed</li>
-<li>colorfg, colorbg: color. defaults to b&amp;w</li>
-</ul><h3>b2b.locate(x, y, string, colorfg (optional), colorbg (optional))</h3>
-
-<p>like the Locate command in BASIC.</p>
-
-<ul>
-<li>x: integer</li>
-<li>y: integer</li>
-<li>string: string to be displayed</li>
-<li>colorfg, colorbg: color. defaults to b&amp;w</li>
-</ul><h3>b2b.ygraph(f, vwin (optional), type (optional), colorfg (optional), colorbg (optional))</h3>
-
-<p>Graphs a Y= graph.</p>
-
-<ul>
-<li>f: function of x to display. ex. function (x) return math.sin(x) end</li>
-<li>vwin: array. ex. {xmin=-6, xmax=6, ymin=-3, ymax=3, step=.1}</li>
-<li>colorfg, colorbg: color. defaults to b&amp;w</li>
-</ul><h3>b2b.inputString(prompt, colorfg (optional), colorbg (optional))</h3>
-
-<p>Returns user input.</p>
-
-<ul>
-<li>prompt: string. Is displayed above the input block.</li>
-<li>colorfg, colorbg: color. defaults to b&amp;w</li>
-</ul>
+<p>Can be found in README.</p>
       </section>
     </div>
 
