Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <li>b2b.locate (like locate in BASIC)</li>
 <li>b2b.ygraph (Y= graph)</li>
 <li>b2b.inputString (get user input)</li>
+<li>b2b.fline (like F-Line in BASIC)</li>
 </ul><h2>3. To be implemented</h2>
 
 <p><em><a href="http://community.casiocalc.org/topic/7095-back2basic-a-luazm-library/">Help me </a> <a href="http://www.cemetech.net/forum/viewtopic.php?t=8883&amp;highlight=">come  up </a> <a href="http://www.omnimaga.org/index.php?topic=15874">with ideas!</a></em></p>
